samples/_failures_safe/1761396949_3a8e7d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ed26bf4c.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_ed26bf4c.c:142:5: error: expected identifier at end of input
  142 |     int limit = analyzer->word_count < 10 ? analyzer->
      |     ^~~
./samples/SAFE/__tmp_ed26bf4c.c:142:5: error: expected declaration or statement at end of input
